Can't select things after hiding rig which has been in pose mode #60807

Closed
opened 2019-01-23 22:50:11 +01:00 by riidom · 6 comments

System Information
Operating system: Kubuntu 18.04
Graphics card: NVidia GTX1060 3GB

system-info.txt generated from blender is attached.

Recreate problem:

  1. Fresh blend file
  2. Add armature (single bone)
  3. Add plane
  4. Parent plane to armature
  5. Select armature, go in pose mode
  6. Hide armature (I used the eye-icon from outliner for this)
  7. See mode display: it says "Object mode" now
  8. Try to select the plane - won't work

Solution:

  1. Unhide armature
  2. Select armature, go from pose mode back to object mode
  3. Hide armature again
  4. Now you can select the plane

Edit:
I forgot to describe the actual problem: If the user doesn't realize, that the rig got hidden while it was in pose mode, they are trapped in a state where they cant select another object.

**System Information** Operating system: Kubuntu 18.04 Graphics card: NVidia GTX1060 3GB *system-info.txt generated from blender is attached.* **Recreate problem:** 1. Fresh blend file 2. Add armature (single bone) 3. Add plane 4. Parent plane to armature 5. Select armature, go in pose mode 6. Hide armature (I used the eye-icon from outliner for this) 7. See mode display: it says "Object mode" now 8. Try to select the plane - won't work **Solution:** 1. Unhide armature 2. Select armature, go from pose mode back to object mode 3. Hide armature again 4. Now you can select the plane *Edit:* I forgot to describe the actual problem: If the user doesn't realize, that the rig got hidden while it was in pose mode, they are trapped in a state where they cant select another object.
Author

Added subscriber: @DominikR

Added subscriber: @DominikR

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

I ran into this very issue today.

I ran into this very issue today.
Campbell Barton self-assigned this 2019-01-24 03:32:40 +01:00

This issue was referenced by 7b35ef23a0

This issue was referenced by 7b35ef23a0468525b17ee45cb474847a431c2f58

The 3D view has no active object when its hidden, but internally there is still an active object - so internal code needs to be sure to ignore.

Note that the rules for how this is meant to work gets messy,
since this rule doesn't apply to any other view (only 3D view),
so it's correct to make mode locking behave differently in the outliner for example.

Noting that we can keep it working this way but it might give us confusing behavior.

The 3D view has no active object when its hidden, but internally there is still an active object - so internal code needs to be sure to ignore. Note that the rules for how this is meant to work gets messy, since this rule doesn't apply to any other view (only 3D view), so it's correct to make mode locking behave differently in the outliner for example. Noting that we can keep it working this way but it might give us confusing behavior.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60807
No description provided.